album sharing implemented